syntax = "proto3";

package  checkout;

option go_package = "/checkout";

service CheckoutService {
  rpc Checkout(CheckoutReq) returns (CheckoutResp) {}
  rpc GetPaymentItem(GetPaymentItemReq) returns (GetPaymentItemResp){}
}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string zip_code = 5;
}

message CheckoutReq {
  uint32 user_id = 1;
  string firstname = 2;
  string lastname = 3;
  string email = 4;
  Address address = 5;
  CreditCardInfo credit_card = 6;
}

message CheckoutResp {
  string order_id = 1;
  string transaction_id = 2;
}

message CreditCardInfo {
  string credit_card_number = 1;
  int32 credit_card_cvv = 2;
  int32 credit_card_expiration_year = 3;
  int32 credit_card_expiration_month = 4;
}
message GetPaymentItemReq{
  uint32 userId = 1;
  string OrderId = 2;
}
message GetPaymentItemResp{
  string CreditCardNumber = 1;
  int32 CreditCardCVV = 2;
  int32 CreditCardExpirationYear  = 3;
  int32 CreditCardExpirationMonth = 4;
  string OrderID = 5;
  string TransactionID = 6;
  uint32 UserID = 7;
}